fix: index html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <input type="button" value="读取图形" onclick="readAsDataURL()">
     <input type="button" value="读取文本文件" onclick="readAsText()">
     <input type="button" value="读取二进制数据" onclick="readAsBinaryString()">
+    <input type="button" value="TextEncoder2ArrayBuffer" onclick="TextEncoder2ArrayBuffer('hello world')">
+    <input type="button" value="blob2ArrayBuffer" onclick="blob2ArrayBuffer()">
+    <input type="button" value="fileReader2ArrayBuffer" onclick="fileReader2ArrayBuffer()">
     <div id="result"></div>
   </div>
 </body>
